Production/Production/src/objects/Collection_Step__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collection_Path__c</fullName>
        <label>Collection Path</label>
        <referenceTo>Collection_Path__c</referenceTo>
        <relationshipLabel>Collection Steps</relationshipLabel>
        <relationshipName>Collection_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_on_this_step__c</fullName>
        <label>Days on this step</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Path_Id__c</fullName>
        <label>External Path Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Step_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Step Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proceed_if_faliure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proceed if faliure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Step_Communication_Type__c</fullName>
        <label>Step Communication Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_type__c</fullName>
        <label>Step type</label>
        <picklist>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refer to Write off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Defaulted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>is_Default_Next_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that the step should be considered as default next step</description>
        <label>is Default Next Step</label>
        <type>Checkbox</type>
    </fields>
    <label>Collection Step</label>
    <nameField>
        <label>Collection Step Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Ig00000004Ya6EAE_00Ng0000000dmAqEAI</fullName>
        <active>true</active>
        <field>Billing_Account__c.Current_Treatment_Step__c</field>
        <filterItems>
            <field>Collection_Step__c.Collection_Path__c</field>
            <operation>equals</operation>
            <valueField>$Source.Current_Treatment_Path__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Billing Account_Current Treatment Step</name>
        <sourceObject>Billing_Account__c</sourceObject>
    </namedFilters>
    <pluralLabel>Collection Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>